--- a/julia/mlp_xor/mlp_xor.ipynb
+++ b/julia/mlp_xor/mlp_xor.ipynb
@@ -30,7 +30,7 @@
     "f(x) = \\sigma(\\theta_w x + b)\n",
     "$\n",
     "\n",
-    "You can actually write code that looks very similar, thanks to Julia's support for unicode characters. It doesn't neccessarily save you any time typing (symbols are typed by entering the $\\LaTeX$ code, _e.g._ `\\sigma` and pressing tab), but it does look pretty cool. "
+    "You can actually write code that looks very similar, thanks to Julia's support for unicode characters. It doesn't necessarily save you any time typing (symbols are typed by entering the $\\LaTeX$ code, _e.g._ `\\sigma` and pressing tab), but it does look pretty cool. "
    ]
   },
   {
@@ -67,15 +67,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_xor = function(num_samples=512)\n",
-    "    x = rand(512,2) .> 0.5\n",
-    "    y = zeros(512,1) \n",
+    "get_xor = function(num_samples=512, dim_x=3)\n",
+    "    x = 1*rand(num_samples,dim_x) .> 0.5\n",
+    "    y = zeros(num_samples,1) \n",
     "\n",
     "    for ii = 1:size(y)[1]\n",
-    "        y[ii] = xor(x[ii,1], x[ii,2])\n",
+    "        y[ii] = reduce(xor, x[ii,:])\n",
     "    end\n",
     "\n",
-    "    x = x + randn(512,2) / 10\n",
+    "    x = x + randn(num_samples,dim_x) / 10\n",
     "\n",
     "    return x, y\n",
     "end\n",
@@ -135,19 +135,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "lr = 1e1;\n",
-    "x, y = get_xor(4);\n",
-    "θ = init_weights();\n",
+    "x, y = get_xor(64,5);\n",
+    "θ = init_weights(5);\n",
     "\n",
-    "scatter(append!(reshape(θ[:wxh],8), reshape(θ[:why],4)), label=\"θ_1\")\n",
-    "dθ = gradient((θ) -> get_loss(x, θ, y), θ);\n",
+    "old_weights = append!(reshape(θ[:wxh], size(θ[:wxh])[1]*size(θ[:wxh])[2]),\n",
+    "    reshape(θ[:why], size(θ[:why])[1] * size(θ[:why])[2]))\n",
+    "    \n",
+    "    \n",
+    "dθ = gradient((θ) -> get_loss(x, θ, y), θ)\n",
+    "plt = scatter(old_weights, label = \"old_weights\")\n",
     "\n",
-    "θ[:wxh], θ[:why] = θ[:wxh] - lr * dθ[1][:wxh], θ[:why] -  lr * dθ[1][:why]\n",
+    "θ[:wxh], θ[:why] = θ[:wxh] .- lr .* dθ[1][:wxh], θ[:why] .- lr .* dθ[1][:why]   \n",
     "\n",
-    "scatter!(append!(reshape(θ[:wxh],8), reshape(θ[:why],4)), label=\"θ_2\")\n"
+    "new_weights = append!(reshape(θ[:wxh], size(θ[:wxh])[1]*size(θ[:wxh])[2]),\n",
+    "    reshape(θ[:why], size(θ[:why])[1] * size(θ[:why])[2]))\n",
+    "\n",
+    "scatter!(new_weights, label=\"new weights\")\n",
+    "display(plt)"
    ]
   },
   {
@@ -165,7 +175,7 @@
    "source": [
     "train = function(x, θ, y, max_steps=1000, lr = 1e-2, l2_reg=1e-4)\n",
     "    \n",
-    "    disp_every = max_steps // 10\n",
+    "    disp_every = max_steps // 100\n",
     "\n",
     "    losses = zeros(max_steps)\n",
     "    acc = zeros(max_steps)\n",
@@ -185,13 +195,13 @@
     "        \n",
     "        if mod(step, disp_every) == 0\n",
     "            \n",
-    "            val_x, val_y = get_xor();\n",
+    "            val_x, val_y = get_xor(512, size(x)[2]);\n",
     "            pred = f(val_x, θ) \n",
     "            loss = log_loss(val_y, pred)\n",
     "            accuracy = get_accuracy(val_y, pred)\n",
     "\n",
     "            println(\"loss at step $step = $loss, accuracy = $accuracy\")\n",
-    "\n",
+    "            #save_frame(θ, step);\n",
     "\n",
     "        end\n",
     "\n",
@@ -210,18 +220,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "dim_x = 2\n",
+    "dim_x = 3\n",
     "dim_h = 4\n",
     "dim_y = 1\n",
     "l2_reg = 1e-4\n",
-    "lr = 1e-1\n",
-    "max_steps = 300000\n",
+    "lr = 1e-2\n",
+    "max_steps = 1000000\n",
     "\n",
     "θ = init_weights(dim_x, dim_y, dim_h)\n",
-    "x, y = get_xor(1024)\n",
+    "x, y = get_xor(512, dim_x)\n",
+    "\n",
+    "println(size(x))\n",
     "\n",
     "\n",
     "plt = violin([\" \"], reshape(θ[:wxh],dim_x * dim_h), label=\"wxh\", title=\"Weights\", alpha = 0.5)\n",
@@ -268,7 +282,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "test_x, test_y = get_xor();\n",
+    "test_x, test_y = get_xor(512,3);\n",
     "\n",
     "pred = f(test_x, θ);\n",
     "test_accuracy = get_accuracy(test_y, pred);\n",
@@ -293,7 +307,85 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Bonus, functions for plotting a decision surface and saving to disk for a training gif. \n",
+    "\n",
+    "get_decision_surface = function(θ)\n",
+    "    \n",
+    "    my_surfacex = []\n",
+    "    my_surfacey = []\n",
+    "    my_surfacez = []\n",
+    "    for xx = -0.25:0.005:1.5-0.25\n",
+    "        for yy = -0.25:0.005:1.5-0.25\n",
+    "            closest = 50000.\n",
+    "            my_coords = [100,100,100]\n",
+    "            for zz = -0.25:0.005:1.5-0.25\n",
+    "                pred = f(reshape([xx,yy,zz],1,3), θ)\n",
+    "                if abs(0.5 - pred[1]) < closest\n",
+    "                    my_coords = [xx,yy,zz]\n",
+    "                    closest = abs(0.5 - pred[1])\n",
+    "                end\n",
+    "            end\n",
+    "            append!(my_surfacex, my_coords[1])\n",
+    "            append!(my_surfacey, my_coords[2])\n",
+    "            append!(my_surfacez, my_coords[3])\n",
+    "        end\n",
+    "    end\n",
+    "            \n",
+    "    return my_surfacex, my_surfacey, my_surfacez\n",
+    "    \n",
+    "end\n",
+    "\n",
+    "\n",
+    "save_frame = function(θ, epoch) \n",
+    "\n",
+    "    plt = scatter3d([0,0,1,1],[0,1,0,1],[1,0,0,1], \n",
+    "        xlim = (-0.05,1.05 ),\n",
+    "        ylim = (-0.05,1.05 ),\n",
+    "        zlim = (-0.05,1.05 ),\n",
+    "        label = \"true\",\n",
+    "        markercolor= :blue, markersize=15)\n",
+    "\n",
+    "    scatter3d!([0,0,1,1],[0,1,0,1],[0,1,1,0], \n",
+    "        xlim = (-0.25,1.25 ),\n",
+    "        ylim = (-0.25,1.25 ),\n",
+    "        zlim = (-0.25,1.25 ),\n",
+    "        label = \"false\",\n",
+    "        markercolor= :red, markersize=15)\n",
+    "\n",
+    "\n",
+    "    my_surface = get_decision_surface(θ);\n",
+    "\n",
+    "    scatter3d!(my_surface[1], my_surface[2], my_surface[3],\n",
+    "        markercolor = :green,\n",
+    "        markerstrokecolor = :green,\n",
+    "        markerstrokealpha = 0.0,\n",
+    "        markeralpha = 0.05,\n",
+    "        label = \"decision boundary\",\n",
+    "        legend = :outerbottomright )\n",
+    "\n",
+    "    for i=1:300 #24\n",
+    "        x, y = get_xor(1, 3)\n",
+    "\n",
+    "        pred = f(x, θ)\n",
+    "\n",
+    "        if pred[1] > 0.5\n",
+    "            my_color = :blue\n",
+    "        else\n",
+    "            my_color = :red\n",
+    "        end\n",
+    "\n",
+    "        scatter3d!([x[1]], [x[2]], [x[3]], \n",
+    "            color = my_color, \n",
+    "            alpha = 0.1,\n",
+    "            label = \"\")\n",
+    "    end \n",
+    "\n",
+    "    savefig(plt, \"frames/temp$epoch.png\")\n",
+    "    \n",
+    "    return plt\n",
+    "end"
+   ]
   }
  ],
  "metadata": {
