add dropout to experiment 2

--- a/regularization_shapes/regularization_shapes.ipynb
+++ b/regularization_shapes/regularization_shapes.ipynb
@@ -259,6 +259,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# visualize L0 through L_n norms\n",
+    "\n",
+    "max_norm_order = 256\n",
+    "\n",
+    "x = np.linspace(-1.0,1.0,128)[np.newaxis,:]\n",
+    "\n",
+    "for n in range(max_norm_order):\n",
+    "    \n",
+    "    with plt.xkcd(scale=0.3, length=128.0):\n",
+    "        \n",
+    "        fig = plt.figure(figsize=(8,6))\n",
+    "        line_type = \".\" if n == 0 else \"-\"\n",
+    "        plt.plot(x[0], norm(x, n), line_type, color=my_cmap(n/max_norm_order), lw=5)\n",
+    "        plt.title(\"$L${}\".format(n), fontsize=my_fontsize)\n",
+    "        plt.savefig(\"./assets/norm{}.png\".format(n))\n",
+    "        plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# visualize taking the limit as we approach the L0 norm\n",
     "\n",
     "orders = np.linspace(2e-2, 1e-17, 32)\n",
@@ -276,30 +300,6 @@
     "        plt.savefig(\"./assets/l0_limit{}.png\".format(cc))\n",
     "        cc += 1\n",
     "        \n",
-    "        plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# visualize L0 through L_n norms\n",
-    "\n",
-    "max_norm_order = 256\n",
-    "\n",
-    "x = np.linspace(-1.0,1.0,128)[np.newaxis,:]\n",
-    "\n",
-    "for n in range(max_norm_order):\n",
-    "    \n",
-    "    with plt.xkcd(scale=0.3, length=128.0):\n",
-    "        \n",
-    "        fig = plt.figure(figsize=(8,6))\n",
-    "        line_type = \".\" if n == 0 else \"-\"\n",
-    "        plt.plot(x[0], norm(x, n), line_type, color=my_cmap(n/max_norm_order), lw=5)\n",
-    "        plt.title(\"$L${}\".format(n), fontsize=my_fontsize)\n",
-    "        plt.savefig(\"./assets/norm{}.png\".format(n))\n",
     "        plt.close(fig)"
    ]
   },
@@ -608,13 +608,18 @@
     "        \n",
     "    return weights\n",
     "\n",
-    "def deep_forward(x, weights):\n",
+    "def deep_forward(x, weights, dropout=0.0):\n",
     "    \n",
     "    for dd in range(len(weights)):\n",
     "        if dd:\n",
     "            x = np.arctan(x)\n",
-    "            \n",
+    "        \n",
     "        x = np.matmul(x, weights[dd])\n",
+    "        if dropout:\n",
+    "            dropout_map = np.random.random((x.shape[0], x.shape[1]))\n",
+    "            x[dropout_map < dropout] *= 0.0\n",
+    "            \n",
+    "            x /= (1 - dropout)\n",
     "        \n",
     "    x = softmax(x)\n",
     "    \n",
@@ -629,9 +634,9 @@
     "    \n",
     "    return all_params\n",
     "\n",
-    "def get_deep_loss(x, weights, y, l_n=[0.,0.,0.,0.,0.]):\n",
+    "def get_deep_loss(x, weights, y, l_n=[0.,0.,0.,0.,0.], dropout=0.0):\n",
     "    \n",
-    "    prediction = deep_forward(x, weights)\n",
+    "    prediction = deep_forward(x, weights, dropout)\n",
     "    \n",
     "    loss = cross_entropy(prediction, y)\n",
     "    \n",
@@ -671,7 +676,7 @@
    },
    "outputs": [],
    "source": [
-    "num_steps = 30000\n",
+    "num_steps = 300\n",
     "disp_every = 50\n",
     "learning_rate = 3e-2\n",
     "reg_scale = 1e-1\n",
@@ -682,8 +687,15 @@
     "    list_weights = []\n",
     "    \n",
     "for ln in [[0,0,0,0.,0.], [reg_scale,0.,0.,0.,0.], [0.,reg_scale,0.,0.,0.],\\\n",
-    "          [0.,0.,reg_scale,0.,0.], [0.,0.,0.,reg_scale,0.], [0.,0.,0.,0.,reg_scale]]:\n",
+    "          [0.,0.,reg_scale,0.,0.], [0.,0.,0.,reg_scale,0.], [0.,0.,0.,0.,reg_scale], None]:\n",
     "    \n",
+    "    if ln is None:\n",
+    "        ln = [0.,0.,0.,0.,0.]\n",
+    "        dropout_rate = 0.25\n",
+    "    else:\n",
+    "        dropout_rate = 0.0\n",
+    "        \n",
+    "        \n",
     "    weights = get_deep_weights(dim_h=16)\n",
     "        \n",
     "    train_losses = []\n",
@@ -726,9 +738,11 @@
     "    \n",
     "    list_weights.append(weights)\n",
     "    \n",
-    "    l_type = np.argmax(ln) if np.sum(ln) else \"noreg\"\n",
+    "    l_type = \"L\" + str(np.argmax(ln)) if np.sum(ln) else \"noreg\"\n",
     "    if l_type == 4:\n",
     "        l_type = \"sup\"\n",
+    "    elif dropout_rate:\n",
+    "        l_type = \"dropout\"\n",
     "    \n",
     "    all_params = get_all_params(weights) \n",
     "    \n",
@@ -758,7 +772,7 @@
     "        plt.axis((0, num_steps, 0.2, 0.80))\n",
     "        plt.xlabel(\"epoch\")\n",
     "        plt.ylabel(\"loss\")\n",
-    "        plt.title(\"losses for L{}\".format(l_type), fontsize=32)\n",
+    "        plt.title(\"losses with {}\".format(l_type), fontsize=32)\n",
     "        plt.legend()\n",
     "        \n",
     "        plt.subplot(122)\n",
@@ -768,10 +782,10 @@
     "        plt.xlabel(\"epoch\")\n",
     "        plt.ylabel(\"accuracy\")\n",
     "        plt.legend()\n",
-    "        plt.title(\"L{} accuracy\".format(l_type), fontsize=32)\n",
+    "        plt.title(\"accuracy with {}\".format(l_type), fontsize=32)\n",
     "        \n",
     "        plt.tight_layout()\n",
-    "        plt.savefig(\"./assets/exp2_progress_L_{}.png\".format(l_type))\n",
+    "        plt.savefig(\"./assets/exp2_progress_{}.png\".format(l_type))\n",
     "        plt.show()\n",
     "        \n",
     "\n",
