sweep trailing changes in WIP notebooks

--- a/bijective_nn/bijective_nn.ipynb
+++ b/bijective_nn/bijective_nn.ipynb
@@ -28,14 +28,30 @@
     "    \n",
     "    return -1/N * np.sum( y_tgt * np.log(pred[:,:num_classes]) \\\n",
     "                      + (1. - y_tgt) * np.log(1. - pred[:,:num_classes]) )\n",
+    "\n",
+    "def mse_loss(y_tgt, pred):\n",
+    "    \n",
+    "    return np.mean((y_tgt - pred)**2)\n",
+    "\n",
+    "\n",
+    "def mae_loss(y_tgt, pred):\n",
+    "    \n",
+    "    return np.mean(np.abs(y_tgt - pred))\n",
     "    \n",
     "def get_log_loss(nn_fn, x, weights, acts, y_tgt):\n",
     "    \n",
-    "    num_classes = y_tgt.shape[1]\n",
     "    pred = nn_fn(x, weights, acts)\n",
-    "    N = y_tgt.shape[0]\n",
     "    \n",
     "    loss = log_loss(y_tgt, pred) \n",
+    "    \n",
+    "    return loss\n",
+    "\n",
+    "    \n",
+    "def get_mse_loss(nn_fn, x, weights, acts, y_tgt):\n",
+    "    \n",
+    "    pred = nn_fn(x, weights, acts)\n",
+    "    \n",
+    "    loss = mse_loss(y_tgt, pred) \n",
     "    \n",
     "    return loss\n",
     "\n",
@@ -49,6 +65,7 @@
     "    return np.mean(temp) \n",
     "\n",
     "gradloss = grad(get_log_loss)\n",
+    "grad_mse_loss = grad(get_mse_loss)\n",
     "\n",
     "def nn_pass(x, weights, acts, forward=True):\n",
     "    \n",
@@ -71,7 +88,7 @@
     "    return x       \n",
     "        \n",
     "\n",
-    "def bnn_pass(x, weights, act, forward=True):\n",
+    "def bnn_pass(x, weights, act, forward=True, regression=True):\n",
     "    \n",
     "    if forward:\n",
     "        c = 1.0\n",
@@ -116,9 +133,9 @@
     "    \n",
     "    #final layer is not bijective\n",
     "    #v = acts[-1](np.matmul(v, weights[-1]))\n",
-    "        \n",
-    "    v = v * output_mask    \n",
-    "    v = acts[-1](v)\n",
+    "    if not regression:\n",
+    "        v = v * output_mask    \n",
+    "        v = acts[-1](v)\n",
     "    \n",
     "    return v\n",
     "\n",
@@ -172,8 +189,212 @@
     "        l_vt1.append(v)\n",
     "    \n",
     "    return l_update, l_mt1, l_vt1\n",
+    "\n",
+    "def relu(x):\n",
+    "    return x * (x > 0.0)\n",
+    "\n",
+    "def leaky_relu(x):\n",
+    "    return x * (x > 0.0) + 0.1 * x * (x <= 0.0)\n",
+    "\n",
+    "def prelu(x,a=0.01):\n",
+    "    return x * (x > 0.0) + a * x * (x <= 0.0)\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "def swish(x):\n",
+    "    return x * sigmoid(x)\n",
+    "\n",
+    "def elu(x, a = 0.1): \n",
+    "    return x * (x > 0.0) + a * (np.exp(x)-1) * (x <= 0.0)\n",
     "    \n",
-    "    "
+    "\n",
+    "def sinc(x):\n",
+    "\n",
+    "    return np.sin(16*x) / (16*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def bnn_pass(x, weights, act, forward=True, regression=True):\n",
+    "    \n",
+    "    if forward:\n",
+    "        c = 1.0\n",
+    "    else:\n",
+    "        c = -1.0\n",
+    "    \n",
+    "    dim_x = x.shape[1]   \n",
+    "    output_mask = np.zeros((1, 2*weights[-1].shape[1]))\n",
+    "    output_mask[:, :10] += 1.0\n",
+    "    \n",
+    "    halfsies = dim_x // 2\n",
+    "    \n",
+    "    flips = [1]\n",
+    "    \n",
+    "    for ii in range(1, len(weights)):\n",
+    "        flips.append(1.0 - flips[-1])\n",
+    "        \n",
+    "    v1 = x[:,:halfsies]\n",
+    "    v2 = x[:,halfsies:]\n",
+    "    \n",
+    "    assert len(weights) == len(act)\n",
+    "    \n",
+    "    if not(forward):\n",
+    "        acts.reverse()\n",
+    "    \n",
+    "     \n",
+    "    for ii in range(len(weights)): #w, a, flip  in zip(weights, acts, flips):\n",
+    "        \n",
+    "        v1 = v1\n",
+    "         \n",
+    "        v2 = v2 + c * acts[ii](np.matmul(v1, weights[ii]))\n",
+    "        \n",
+    "        v = np.append(v1, v2, axis=1)\n",
+    "        \n",
+    "        if flips[ii]:\n",
+    "            v1 = v[:,:halfsies]\n",
+    "            v2 = v[:,halfsies:]\n",
+    "        else:\n",
+    "            v1 = v[:,halfsies:]\n",
+    "            v2 = v[:,:halfsies]\n",
+    "    \n",
+    "    \n",
+    "    #final layer is not bijective\n",
+    "    #v = acts[-1](np.matmul(v, weights[-1]))\n",
+    "    if not regression:\n",
+    "        v = v * output_mask    \n",
+    "        v = acts[-1](v)\n",
+    "    \n",
+    "    return v\n",
+    "\n",
+    "\n",
+    "wbnn = []\n",
+    "acts = []\n",
+    "\n",
+    "x = np.random.random((1,64))\n",
+    "\n",
+    "for layers in range(6):\n",
+    "    wbnn.append(npr.randn(32,32))\n",
+    "    acts.append(np.tanh)\n",
+    "    pred = bnn_pass(x, wbnn, acts, forward=True)\n",
+    "    rpred = bnn_pass(pred, wbnn, acts, forward=False)\n",
+    "\n",
+    "   \n",
+    "    \n",
+    "    plt.figure()\n",
+    "    plt.plot(x[0]-rpred[0])\n",
+    "    plt.title(\"{} layers input - rpred\".format(1+layers))\n",
+    "    plt.show()\n",
+    "    \n",
+    "    if(1):\n",
+    "        \n",
+    "        plt.figure()\n",
+    "        plt.plot(x[0]-pred[0])\n",
+    "        plt.title(\"{} layers input - output\".format(1+layers))\n",
+    "        plt.show()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-1,1,64).reshape(1,64)\n",
+    "y = sinc(x)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(x[0],y[0])\n",
+    "plt.show()\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-1,1,64).reshape(1,64)\n",
+    "y = sinc(2*x)\n",
+    "\n",
+    "wbnn = [npr.randn(32,32)/32**2, npr.randn(32,32)/(32*32)]#, npr.randn(32,32)/(32*32)]\n",
+    "acts = [relu, relu]#, np.tanh]\n",
+    "\n",
+    "loss = get_mse_loss(bnn_pass, y, wbnn, acts, y)\n",
+    "print(\"loss = {:.2f}\".format(epoch, loss))\n",
+    "\n",
+    "pred = bnn_pass(y, wbnn, acts)\n",
+    "predr = bnn_pass(pred, wbnn, acts, forward=False)\n",
+    "plt.figure()\n",
+    "plt.plot(x[0], y[0], label=\"target\")\n",
+    "plt.plot(x[0], pred[0], label=\"forward pred.\")\n",
+    "plt.plot(x[0], predr[0], label=\"reverse pred.\")\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "grad_mse_loss = grad(get_mse_loss, argnum=2)\n",
+    "m, v = None, None\n",
+    "\n",
+    "lr = 3e-9\n",
+    "l2_reg = 1e-3\n",
+    "l1_reg = 1e-3\n",
+    "\n",
+    "for epoch in range(10):\n",
+    "    if epoch % 1 == 0:\n",
+    "        lr = lr * 0.9\n",
+    "        pred = bnn_pass(y, wbnn, acts)\n",
+    "        loss = mse_loss(y, pred)\n",
+    "\n",
+    "        print(\"step {} loss = {:.2f}\".format(epoch, loss))\n",
+    "        \n",
+    "        pred = bnn_pass(x, wbnn, acts)\n",
+    "        loss = get_mse_loss(bnn_pass, y, wbnn, acts, y)\n",
+    "        \n",
+    "        print(\"step {} validation loss = {:.2f}\".format(epoch, loss) )\n",
+    "        print(lr)\n",
+    "    \n",
+    "    grads = grad_mse_loss(bnn_pass, y, wbnn, acts, y)\n",
+    "    \n",
+    "    update, m, v = adam_update(grads, m, v)\n",
+    "    \n",
+    "    if epoch > 500:\n",
+    "    \n",
+    "        l2_reg = 1e-9\n",
+    "        l1_reg = 1e-9\n",
+    "    \n",
+    "    for my_grad, my_params in zip(update, wbnn):\n",
+    "\n",
+    "        my_params -= lr * (my_grad + l1_reg * np.abs(my_params) + l2_reg * np.abs(my_params)**2)\n",
+    "\n",
+    "pred = bnn_pass(y, wbnn, acts)\n",
+    "predr = bnn_pass(pred, wbnn, acts, forward=False)\n",
+    "plt.figure()\n",
+    "plt.plot(x[0], y[0], label=\"target\")\n",
+    "plt.plot(x[0], pred[0], label=\"forward pred.\")\n",
+    "plt.plot(x[0], predr[0], label=\"reverse pred.\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(x[0], y[0])\n",
+    "plt.plot(x[0], pred[0])\n",
+    "plt.show()"
    ]
   },
   {
@@ -219,19 +440,6 @@
     "test_x, test_y = x[128:256,:], y[128:256]\n",
     "\n",
     "train_x, train_y = x[256:,:], y[256:]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def f(num=1):\n",
-    "    print(\"😉\" * num)\n",
-    "\n",
-    "f(10)\n",
-    "\n"
    ]
   },
   {
