--- a/onn_digits/julia/Untitled.ipynb
+++ b/onn_digits/julia/Untitled.ipynb
@@ -24,7 +24,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "size(x)"
+   ]
   },
   {
    "cell_type": "code",
@@ -39,6 +42,28 @@
     "train_x = permutedims(train_x, [3,2,1]);\n",
     "\n",
     "test_x = permutedims(test_x, [3,2,1]);\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = datasets.load_digits(return_X_y=true)\n",
+    "\n",
+    "val_x = reshape(x[1:256,:],256, 8, 8);\n",
+    "val_y = get_one_hot(y[1:256]);\n",
+    "\n",
+    "train_x = reshape(x[257:1280, :], 1024, 8, 8);\n",
+    "train_y = get_one_hot(y[256:1280]);\n",
+    "\n",
+    "test_x = reshape(x[1281:1797, :], 517, 8, 8);\n",
+    "test_y = get_one_hot(y[1280:1797]);\n",
+    "\n",
+    "train_x = PaddedView(0.0, train_x, (1024, 64,64), (1, 31, 31));\n",
+    "test_x = PaddedView(0.0, test_x, (517, 64,64), (1, 31, 31));\n",
+    "val_x = PaddedView(0.0, test_x, (256, 64,64), (1, 31, 31));"
    ]
   },
   {
@@ -154,7 +179,9 @@
     "   \n",
     "    #hard-coded padding, TODO: generalize for variable dimensions\n",
     "    #wavefront = PaddedView(0.0 + 0.0 * im, data_array, (dim_n, 56,56), (1, 15,15))\n",
-    "    wavefront = ones(dim_n, dim_x, dim_y) .* exp.(im*2π .* in_x) \n",
+    "    wavefront = ones(dim_n, dim_x, dim_y) .* \n",
+    "                exp.(im*2π .* in_x) #.*\n",
+    "                #reshape((1.0 .* sqrt.(fxx.^2 + fyy.^2) .<= 8),1,dim_x,dim_y)\n",
     "    \n",
     "    wavefront2 = multiply_and_propagate(wavefront, phase_slices, fxx, fyy, n2)\n",
     "    \n",
@@ -253,10 +280,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size, dim_x, dim_y = 32, 28, 28 #56, 56;\n",
-    "num_slices = 1;\n",
+    "batch_size, dim_x, dim_y = 32, 64, 64 #56, 56;\n",
     "\n",
-    "y_one_hot = get_one_hot(train_y);\n",
     "\n",
     "#phase_slices = [exp.(im * 2π * randn(1,dim_x, dim_y)) for aa in 1:num_slices];\n",
     "\n",
@@ -265,7 +290,7 @@
     "#    :3 => \n",
     "\n",
     "num_slices = 8\n",
-    "phase_slices = [1.0 .* exp.((im * 2π) .* zeros(1,dim_x, dim_y)/100)\n",
+    "phase_slices = [1.0 .* exp.((im * 2π) .* zeros(1 ,dim_x, dim_y)/100)\n",
     "    for ii in 1:num_slices]\n",
     "\n",
     "\n",
@@ -292,27 +317,27 @@
     "\n",
     "lr = 1e-3\n",
     "n2 = 1e-20\n",
-    "\n",
-    "for step in 1:5000\n",
+    "println(\"go already\")\n",
+    "for step in 1:500\n",
     "    \n",
     "    #loss = get_onn_loss(in_x, phase_slices, y_one_hot[1:batch_size,:]);\n",
     "    #temp \n",
-    "    loss =  get_onn_loss(in_x, phase_slices, y_one_hot[1:batch_size,:], decision_zones, fxx, fyy);\n",
+    "    loss =  get_onn_loss(in_x, phase_slices, train_y[1:batch_size,:], decision_zones, fxx, fyy);\n",
     "   \n",
-    "    if (step-1) % 500 == 0\n",
+    "    if (step-1) % 50 == 0\n",
     "        \n",
     "        intensity = get_intensity(in_x, phase_slices, fxx, fyy, n2)\n",
     "        intensity2 = intensity ./ maximum(intensity, dims=[2,3])\n",
     "        pred = get_pred(intensity2, decision_zones)\n",
     "        pred_sm = softmax(pred)\n",
-    "        accuracy = get_accuracy(y_one_hot[1:batch_size,:], pred_sm)\n",
+    "        accuracy = get_accuracy(train_y[1:batch_size,:], pred_sm)\n",
     "        \n",
     "        println(\"step $step, loss = $loss, accuracy = $accuracy\"); #, size(d_slices))\n",
     "        \n",
     "    end\n",
     "\n",
     "    d_slices = gradient((phase_slices) -> \n",
-    "        get_onn_loss(in_x, phase_slices, y_one_hot[1:batch_size,:], decision_zones, fxx, fyy),\n",
+    "        get_onn_loss(in_x, phase_slices, train_y[1:batch_size,:], decision_zones, fxx, fyy),\n",
     "        phase_slices);\n",
     "    \n",
     "    for slice_idx in 1:length(phase_slices)\n",
@@ -321,8 +346,16 @@
     "\n",
     "#println()\n",
     "    \n",
-    "end\n",
-    "\n"
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size(fxx)"
    ]
   },
   {
