fix dropout and update text and exp summary logging

--- a/regularization_shapes/regularization_shapes.ipynb
+++ b/regularization_shapes/regularization_shapes.ipynb
@@ -63,20 +63,99 @@
     "I wasn't able to get a really dramatic \"swoosh\" example of overfitting as an un-regularized baseline, even with an exxageratingly wide hidden layer with 256 units. None the less, the gap between the training and validation performance with no regularization was 2.9%. \n",
     "\n",
     "```\n",
-    "# After training for 50,000 epochs with no regularization, dim_h = 256\n",
+    "my seed: 13training step 24999\n",
+    "  training loss: 4.626e-01    training accuracy: 0.969\n",
+    "  validation loss: 4.422e-01    validation accuracy: 0.950\n",
     "\n",
-    "min/max/mean magnitude and number of zeros:\n",
-    "  0.000e+00/1.015e-01/8.837e-03 and 10932.0\n",
-    "training step 49999\n",
+    "Regularization mode no_reg with coefficient 0.05 \n",
+    "my seed: 1337training step 24999\n",
+    "  training loss: 4.624e-01    training accuracy: 0.969\n",
+    "  validation loss: 4.419e-01    validation accuracy: 0.946\n",
     "\n",
-    "  training loss: 4.720e-01\n",
-    "    training accuracy: 0.960\n",
+    "Regularization mode no_reg with coefficient 0.05 \n",
+    "my seed: 42training step 24999\n",
+    "  training loss: 4.626e-01    training accuracy: 0.971\n",
+    "  validation loss: 4.422e-01    validation accuracy: 0.954\n",
     "\n",
-    "  validation loss: 4.503e-01\n",
-    "    validation accuracy: 0.931\n",
     "```\n",
     "\n",
-    "<img src=\"./assets/progress_lNone.png\">\n",
+    "train: 0.97 +/- 9.4e-4\n",
+    "val: 0.95 +/- 3.3e-3\n",
+    "\n",
+    "<img src=\"./assets/progress_no_reg.png\">\n",
+    "\n",
+    "\n",
+    "\n",
+    "```\n",
+    "Regularization mode L0 with coefficient 0.05 \n",
+    "my seed: 13training step 24999\n",
+    "  training loss: 4.629e-01    training accuracy: 0.971\n",
+    "  validation loss: 4.424e-01    validation accuracy: 0.950\n",
+    "\n",
+    "Regularization mode L0 with coefficient 0.05 \n",
+    "my seed: 1337training step 24999\n",
+    "  training loss: 4.627e-01    training accuracy: 0.969\n",
+    "  validation loss: 4.424e-01    validation accuracy: 0.946\n",
+    "\n",
+    "Regularization mode L0 with coefficient 0.05 \n",
+    "my seed: 42training step 24999\n",
+    "  training loss: 4.627e-01    training accuracy: 0.971\n",
+    "  validation loss: 4.420e-01    validation accuracy: 0.946\n",
+    "```\n",
+    "\n",
+    "\n",
+    "```\n",
+    "Regularization mode L1 with coefficient 0.05 \n",
+    "my seed: 13training step 24999\n",
+    "  training loss: 4.712e-01    training accuracy: 0.961\n",
+    "  validation loss: 4.506e-01    validation accuracy: 0.937\n",
+    "\n",
+    "Regularization mode L1 with coefficient 0.05 \n",
+    "my seed: 1337training step 24999\n",
+    "  training loss: 4.714e-01    training accuracy: 0.958\n",
+    "  validation loss: 4.504e-01    validation accuracy: 0.937\n",
+    "\n",
+    "Regularization mode L1 with coefficient 0.05 \n",
+    "my seed: 42training step 24999\n",
+    "  training loss: 4.710e-01    training accuracy: 0.960\n",
+    "  validation loss: 4.503e-01    validation accuracy: 0.941\n",
+    "\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "Regularization mode L2 with coefficient 0.05 \n",
+    "my seed: 13training step 24999\n",
+    "  training loss: 4.797e-01    training accuracy: 0.964\n",
+    "  validation loss: 4.583e-01    validation accuracy: 0.931\n",
+    "\n",
+    "Regularization mode L2 with coefficient 0.05 \n",
+    "my seed: 1337training step 24999\n",
+    "  training loss: 4.794e-01    training accuracy: 0.958\n",
+    "  validation loss: 4.580e-01    validation accuracy: 0.937\n",
+    "\n",
+    "Regularization mode L2 with coefficient 0.05 \n",
+    "my seed: 42training step 24999\n",
+    "  training loss: 4.798e-01    training accuracy: 0.960\n",
+    "  validation loss: 4.586e-01    validation accuracy: 0.933\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "Regularization mode L3 with coefficient 0.05 \n",
+    "my seed: 13training step 24999\n",
+    "  training loss: 4.634e-01    training accuracy: 0.971\n",
+    "  validation loss: 4.430e-01    validation accuracy: 0.950\n",
+    "\n",
+    "Regularization mode L3 with coefficient 0.05 \n",
+    "my seed: 1337training step 24999\n",
+    "  training loss: 4.631e-01    training accuracy: 0.972\n",
+    "  validation loss: 4.427e-01    validation accuracy: 0.952\n",
+    "\n",
+    "Regularization mode L3 with coefficient 0.05 \n",
+    "my seed: 42training step 24999\n",
+    "  training loss: 4.633e-01    training accuracy: 0.974\n",
+    "  validation loss: 4.428e-01    validation accuracy: 0.950\n",
+    "```\n",
+    "\n",
     "\n",
     "All regularization methods did produce a slightly narrower gap between training and validation performance, but the difference is not so stark as to provide a basis for confident conclusions (though it should guide our thinking when setting up future experiments). A good sanity check for this is that $L_0$ regularization narrowed the training-validation gap by 0.9% in the first experiment, and I have no explanation for why because the regularization has a discontinuity at x=0.0 and is absolutely flat everywhere else. This shouldn't produce any sort of gradient that could regularize model parameters, but there may be numerical approximations used in [`autograd`](https://github.com/HIPS/autograd), which I used as a lightweight automatic differentiation package for these experiments. The same goes for regularization with the $L_\\infty$ norm.\n",
     "\n",
@@ -495,7 +574,7 @@
     "                    train_loss = get_loss(train_x, wx2h, wh2y, train_y) #/ train_x.shape[0]\n",
     "                    val_loss = get_loss(val_x, wx2h, wh2y, val_y) #/ val_x.shape[0]\n",
     "\n",
-    "                if(1): # reach unreachable code below for progress reports \n",
+    "                if(0): # reach unreachable code below for progress reports \n",
     "                    print(\"training step {}\\n\".format(step))\n",
     "                    print(\"  training loss: {:.3e}\".format(train_loss))\n",
     "                    print(\"    training accuracy: {:.3f}\\n\".format(train_accuracy))\n",
@@ -537,7 +616,10 @@
     "        with open(\"./results/exp1_summary.txt\".format(l_type), 'a') as f:\n",
     "\n",
     "            f.write(\"\\n\\nRegularization mode {} with coefficient {} \\n\".format(l_type, reg_scale))\n",
-    "            f.write(\"my seed: {}\".format(my_seed))\n",
+    "            f.write(\"my seed: {} \".format(my_seed))\n",
+    "            f.write(\"min/max/mean magnitude and number of zeros:\")\n",
+    "            f.write(\"  {:.3e}/{:.3e}/{:.3e} and {}\\n\"\\\n",
+    "              .format(my_min, my_max, my_mean, num_zeros))\n",
     "            f.write(\"training step {}\\n\".format(step))\n",
     "            f.write(\"  training loss: {:.3e}\".format(train_loss))\n",
     "            f.write(\"    training accuracy: {:.3f}\\n\".format(train_accuracy))\n",
@@ -620,8 +702,11 @@
     "        \n",
     "        x = np.matmul(x, weights[dd])\n",
     "        if dropout:\n",
-    "            dropout_map = np.random.random((x.shape[0], x.shape[1]))\n",
-    "            x[dropout_map < dropout] *= 0.0\n",
+    "            dropout_map = 1.0 * \\\n",
+    "                (np.random.random((x.shape[0], x.shape[1])) \\\n",
+    "                > dropout)\n",
+    "            \n",
+    "            x = x * (dropout_map)\n",
     "            \n",
     "            x /= (1 - dropout)\n",
     "        \n",
@@ -690,12 +775,13 @@
     "else:\n",
     "    list_weights = []\n",
     "    \n",
-    "for ln in [[0,0,0,0.,0.], [reg_scale,0.,0.,0.,0.], [0.,reg_scale,0.,0.,0.],\\\n",
-    "          [0.,0.,reg_scale,0.,0.], [0.,0.,0.,reg_scale,0.], [0.,0.,0.,0.,reg_scale], None]:\n",
+    "for ln in [0,0,0,0.,0.], [reg_scale,0.,0.,0.,0.], [0.,reg_scale,0.,0.,0.],\\\n",
+    "            [0.,0.,reg_scale,0.,0.], [0.,0.,0.,reg_scale,0.], [0.,0.,0.,0.,reg_scale], None]:\n",
     "    \n",
     "    if ln is None:\n",
     "        ln = [0.,0.,0.,0.,0.]\n",
-    "        dropout_rate = 0.10\n",
+    "        dropout_rate = 0.330\n",
+    "        print(\"using dropout with rate {}\".format(dropout_rate))\n",
     "    else:\n",
     "        dropout_rate = 0.0\n",
     "        \n",
@@ -734,11 +820,13 @@
     "                train_accuracies.append(train_accuracy)\n",
     "                val_accuracies.append(val_accuracy)\n",
     "                epochs.append(step)\n",
-    "\n",
-    "            grads = get_deep_grad(train_x, weights, train_y, l_n=ln)\n",
+    "            \n",
+    "            #import pdb; pdb.set_trace()\n",
+    "            grads = get_deep_grad(train_x, weights, train_y, l_n=ln, dropout=dropout_rate)\n",
     "\n",
     "            for ii in range(len(weights)):\n",
-    "                weights[ii] -= learning_rate * grads[ii]\n",
+    "                weights[ii] -= dropout_rate * learning_rate * grads[ii]\n",
+    "                # / (1-dropout_rate)\n",
     "\n",
     "        list_weights.append(weights)\n",
     "\n",
@@ -768,16 +856,21 @@
     "        print(\"    validation accuracy: {:.3f}\".format(val_accuracy))\n",
     "\n",
     "        np.save(\"./weights/exp2_{}_sd{}.npy\".format(l_type, my_seed), weights)\n",
-    "        np.save(\"./results/exp2_accuracy_{}_sd{}.npy\".format(l_type, my_seed), [epochs, train_accuracies, val_accuracies])\n",
-    "        np.save(\"./results/exp2_losses_{}_sd{}.npy\".format(l_type, my_seed), [epochs, train_losses, val_losses])\n",
+    "        np.save(\"./results/exp2_accuracy_{}_sd{}.npy\".format(l_type, my_seed),\\\n",
+    "                [epochs, train_accuracies, val_accuracies])\n",
+    "        np.save(\"./results/exp2_losses_{}_sd{}.npy\".format(l_type, my_seed),\\\n",
+    "                [epochs, train_losses, val_losses])\n",
     "\n",
     "\n",
     "        with open(\"./results/exp2_summary.txt\".format(l_type), 'a') as f:\n",
     "\n",
     "            f.write(\"\\n\\n Regularization mode {} with coefficient {}, dropout = {} \\n\"\\\n",
     "                    .format(l_type, reg_scale, dropout_rate))\n",
-    "            f.write(\"Random seed: {}\\n\".format(my_seed))\n",
+    "            f.write(\"Random seed: {} \".format(my_seed))\n",
     "            f.write(\"training step {}\\n\".format(step))\n",
+    "            f.write(\"min/max/mean magnitude and number of zeros: \")\n",
+    "            f.write(\"  {:.3e}/{:.3e}/{:.3e} and {}\\n\"\\\n",
+    "              .format(my_min, my_max, my_mean, num_zeros))\n",
     "            f.write(\"  training loss: {:.3e}\".format(train_loss))\n",
     "            f.write(\"    training accuracy: {:.3f}\\n\".format(train_accuracy))\n",
     "            f.write(\"  validation loss: {:.3e}\".format(val_loss))\n",
