update readme and regularization notebook

--- a/regularization_shapes/regularization_shapes.ipynb
+++ b/regularization_shapes/regularization_shapes.ipynb
@@ -767,7 +767,7 @@
    "source": [
     "num_steps = 25000\n",
     "disp_every = 250\n",
-    "learning_rate = 3e-2\n",
+    "learning_rate = 3e-1\n",
     "reg_scale = 5e-2\n",
     "\n",
     "if restore_weights:\n",
@@ -775,7 +775,7 @@
     "else:\n",
     "    list_weights = []\n",
     "    \n",
-    "for ln in [0,0,0,0.,0.], [reg_scale,0.,0.,0.,0.], [0.,reg_scale,0.,0.,0.],\\\n",
+    "for ln in [[0,0,0,0.,0.], [reg_scale,0.,0.,0.,0.], [0.,reg_scale,0.,0.,0.],\\\n",
     "            [0.,0.,reg_scale,0.,0.], [0.,0.,0.,reg_scale,0.], [0.,0.,0.,0.,reg_scale], None]:\n",
     "    \n",
     "    if ln is None:\n",
@@ -783,7 +783,7 @@
     "        dropout_rate = 0.330\n",
     "        print(\"using dropout with rate {}\".format(dropout_rate))\n",
     "    else:\n",
-    "        dropout_rate = 0.0\n",
+    "        dropout_rate = 0\n",
     "        \n",
     "    for my_seed in [13, 1337, 42]:\n",
     "        np.random.seed(my_seed)\n",
@@ -825,7 +825,7 @@
     "            grads = get_deep_grad(train_x, weights, train_y, l_n=ln, dropout=dropout_rate)\n",
     "\n",
     "            for ii in range(len(weights)):\n",
-    "                weights[ii] -= dropout_rate * learning_rate * grads[ii]\n",
+    "                weights[ii] -=  learning_rate * grads[ii]\n",
     "                # / (1-dropout_rate)\n",
     "\n",
     "        list_weights.append(weights)\n",
